# dnd_agenda

./: .env  .env.example  .gitignore  .gitpod.dockerfile  .gitpod.yml  Cargo.toml  README.md  Rocket.toml  Rocket.toml.example  cobertura.xml  example_frontend_dates.js  init.sql  random  random.rs  rust.yml  todo.md
.github/workflows/: rust.yml  test.yml
client/: package-lock.json  package.json
migrations/2019-09-13-181534_create_users_table/: up.sql
migrations/2019-09-24-184745_create_sessions_table/: up.sql
migrations/2019-09-24-192613_create_users_sessions_table/: up.sql
migrations/2019-09-24-205705_create_sessions_users_table/: down.sql  up.sql
migrations/2019-10-05-232605_create_sessions_guests_table/: up.sql
migrations/2019-10-11-171336_create_groups_table/: up.sql
migrations/2019-10-11-171827_create_groups_sessions_table/: down.sql  up.sql
migrations/2019-10-11-172041_create_groups_users_table/: down.sql  up.sql
migrations/2019-10-13-231045_create_sessions_table/: up.sql
migrations/2019-10-13-231110_create_sessions_guests_table/: down.sql
src/: api.rs  config.rs  database.rs  lib.rs  mailgun.rs  main.rs  schema.rs
src/group/: mod.rs  routes.rs
src/session/: mod.rs  routes.rs
src/user/: controller.rs  mod.rs  routes.rs
tests/: common.rs  users.rs
