[package]
name = "dnd_agenda"
version = "0.1.0"
authors = ["SRugina <dev@srugina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
bcrypt = "0.6.0"
frank_jwt = { git = "https://github.com/GildedHonour/frank_jwt" }
chrono = {version = "0.4.9", features = ["serde"]}
validator = "0.10.0"
validator_derive = "0.10.0"
slug = "0.1.4"
rand = "0.7.2"
regex = "1.3.1"
lazy_static = "1.4.0"
itertools = "0.8.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = true
features = ["diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.2.0"