[package]
name = "dnd_agenda"
version = "0.1.0"
authors = ["SRugina <dev@srugina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_cors = { version = "0.5.1", default-features = false }
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
bcrypt = "0.6.1"
frank_jwt = { git = "https://github.com/GildedHonour/frank_jwt" }
chrono = {version = "0.4.10", features = ["serde"]}
validator = "0.10.0"
validator_derive = "0.10.0"
slug = "0.1.4"
rand = "0.7.2"
regex = "1.3.1"
lazy_static = "1.4.0"
itertools = "0.8.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = true
features = ["diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.2.0"